# aclip

./: .gitignore  README.md
docs/: ARCHITECTURE.md  AUTH-STANDARD.md  CONFORMANCE.md  DOCTOR-CONTROL-PLANE.md  IMPLEMENTATION-PLAN.md  INTERACTIVE-CLI-BOUNDARY.md  INTEROPERABILITY-ARCHITECTURE.md  PRD.md  PROGRESSIVE-DISCLOSURE-MARKDOWN-SPEC.md  PUBLISHING-STRATEGY.md  RELEASE-WORKFLOW.md  SESSION-CONTROL-PLANE.md  SKILL-EXPORT-HOOKS-VPD.md  SPEC.md  TEN-YEAR-AGENT-TODO.md  VPD-NEXT-ITERATION-DECISIONS.md  WORKFLOW-HOOKS-AND-SKILL-EXPORT.md
schema/: manifest.schema.json  result.schema.json  runtime-help-command.schema.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/demo-notes/: .aclip-demo-notes.json  README.md
sdk/python/examples/demo-notes/scripts/: build.py  export_skills.py
sdk/python/examples/demo-notes/skills/note-create-best-practice/: SKILL.md
sdk/python/examples/demo-notes/skills/notes-overview/references/: README.md
sdk/python/examples/demo-notes/src/aclip_demo_notes/: __main__.py  app.py
sdk/python/scripts/: publish.py
sdk/python/src/aclip/: __init__.py  app.py  auth_control_plane.py  build_cli_cli.py  click_backend.py  contracts.py  decorators.py  doctor_control_plane.py  launcher.py  package_cli.py  packaging.py  render_markdown.py  runtime.py  schema.py  session_control_plane.py
sdk/python/src/aclip/_schema/: error.schema.json  manifest.schema.json  result.schema.json  runtime-help-command.schema.json  runtime-help-index.schema.json
sdk/python/tests/: conftest.py  test_click_backend.py  test_click_translation.py  test_decorator_authoring.py  test_demo_cli.py  test_manifest.py  test_module_exports.py  test_packaging.py  test_session_control_plane.py  test_tree_authoring.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/typescript/schema/: manifest.schema.json  runtime-help-command-group.schema.json
sdk/typescript/scripts/: publish.mjs
sdk/typescript/src/: app.ts  authControlPlane.ts  buildCliCli.ts  contracts.ts  (+8 more)
(+12 files in other folders)
